examples/inProgress/C/tests/shouldFail/compareUnknown.c
int main(void){
	char x, y;
	return x == y;
}
